--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/ApresentacaoNew.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.32-bin.jar=C:\\Users\\e1000son\\Downloads\\mysql-connector-java-5.1.32-bin.jar
+file.reference.mysql-connector-java-5.1.32-bin.jar=D:\\FormacaoCiencia\\Faculdade\\1stAno\\2ndSemestre\\Cadeiras\\IntroAProgr(Java) (Done_Equiv InC_Language)\\Software\\mysql-connector-java-5.1.32-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
